# AISD2

./: GRUPA 1.md  ankieta_role  dwie_tablice.py  lista_sasiedztwa.py  macierz_sasiedztwa.py  red_black_tree.cpp  wyzwania,txt.txt  zad_2.cpp  zad_3_wyp_ot.cpp
PROJEKT/: Wzorzec_dokumentacji.txt  Zeszyt1.xlsx  specyfikacja_word.docx  wyszukwanie_hasowanie.cpp  wzorzec_dokumentacji.txt
PROJEKT/DOKUMENTACJA/TESTY/Wzorzec/: testwzorcow.txt
PROJEKT/Kody/: hashowanie_wyszukiwanie.cpp  reprezentacja_danych.cpp  reprezentacja_danych_v2.cpp  wyszukwanie_haszowanie.cpp
PROJEKT/Kody/Wyszukiwanie/: KMP_wyszukiwanie.cpp  hashowanie_wyszukiwanie.cpp
PROJEKT/Kody/max_przepływ(podpunkt 2)/: graf_budowa.cpp  graf_budowa.h
PROJEKT/Kody/min_cost_max_flow (Podpunkt 3)/: dane3.txt  min_cost_max_flow.h  reprezentacja_danych.h
PROJEKT/Kody/min_max_flow_i_tekstowe/: algorytmy_tekstowe.cpp  reprezentacja_danych.h
PROJEKT/PROBLEMATYA/PROBLEM_2/: main.cpp
PROJEKT/PROBLEMATYKA/PROBLEM-5/KODY/: main.cpp
PROJEKT/PROBLEMATYKA/PROBLEM_2/: dane.txt  max_przeplyw.cpp  max_przeplyw.h  reprezentacja_danych.h
PROJEKT/PROBLEMATYKA/PROBLEM_3/: main.cp
PROJEKT/PROBLEMATYKA/PROBLEM_4/: dane.txt  main.cpp  reprezentacja_danych.h  wypukla_otoczka.h
PROJEKT/PROBLEMATYKA/PROBLEM_5/ALGORYTMY/: BM.cpp  Trie_wyszukiwanie.cpp  naiwne_wyszukiwanie.cpp
PROJEKT/PROBLEMATYKA/PROBLEM_5/KODY/: Huffman.cpp  Poprawiony_Main.cpp  WYPUKLA_OTOCKA_H.h  algorytmy_tekstowe.cpp  algorytmy_tekstowe.h  graf_budowa.cpp  main.cpp  min_cost_max  reprezentacja_danych.h  wynik.txt.  wypukla_otoczka.cpp
PROJEKT/PROBLEMATYKA/PROBLEM_6/: Huffman.h  main.cpp
PROJEKT/PROBLEMATYKA/PROBLEM_7/: algorytmy_tekstowe.cpp
PROJEKT/PROBLEMATYKA/PROBLEM_7/KODY/: CMakeLists.txt  Projekt_V2_pl_PL.ts  algorytmy_tekstowe.cpp  algorytmy_tekstowe.h  dropbutton.cpp  dropbutton.h  graf_budowa.cpp  graf_budowa.h  graphwidget.cpp  graphwidget.h  huffman.cpp  huffman.h  main.cpp  mainwindow.cpp  mainwindow.h  min_cost_max_flow.cpp  min_cost_max_flow.h  obszar_wrzuc.h  reprezentacja_danych.h  wypukla_otoczka.h
PROJEKT/PROBLEMATYKA/PROBLEM_7/KODY_V2/: CMakeLists.txt  dropbutton.h  graphwidget.cpp  graphwidget.h  huffman.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.rc
PROJEKT/PROBLEMATYKA/PROBLEM_7/PRZYKŁADOWE_DANE/: dane1.txt  dane2.txt  dane3.txt  dane4.txt
PROJEKT/PROJEKT_OSTATECZNY/: algorytmy_tekstowe.h  graf_budowa.h  graphwidget.cpp  huffman.h  mainwindow.cpp  mainwindow.h  reprezentacja_danych.h  wypukla_otoczka.h
ZADANIE 1. Reprezentacja grafów i digrafów ważonych/: dwie_tablice.py
ZADANIE 1: Reprezentacja grafów i digrafów ważonych/: dwie_tablice.py  dwie_tablice_wagi.py  lista_sasiedztwa.py  lista_sasiedztwa_wagi.py  macierz_sasiedztwa_wagi.py
ZADANIE 2: Przepływ w sieci/: zadanie2.txt  zadanie4.cpp  zadanie5.cpp
ZADANIE 3: Przepływ w sieci/: zadanie2.txt
ZADANIE 5: Wypukła otoczka/: zad_5_wyp_ot.cpp
ZADANIE 6: Zrównoważone drzewa BST/: red_black_tree.cpp
